[project]
name = "ai_agent"
version = "0.1.0"
description = "AI Agent with FastAPI, LangChain, MCP, and Gemini support"
authors = ["Satya Charan <your-email@example.com>"]
readme = "README.md"
requires-python = "=1.6.1"

[tool.setuptools.packages.find]
where = ["."]

[project.dependencies]
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
langchain = "*"
langchain-openai = "*"
langchain-mcp-adapters = "*"
openai = "*"
requests = "*"
streamlit = "*"
pandas = "*"
matplotlib = "*"
SQLAlchemy = "*"
google-generativeai = "*"
mcp = "*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
